--- a/boston_housing/Untitled.ipynb
+++ b/boston_housing/Untitled.ipynb
@@ -227,6 +227,82 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import ShuffleSplit\n",
+    "import numpy as np\n",
+    "X = np.array([[1, 2], [3, 4], [5, 6], [7, 8]])\n",
+    "y = np.array([1, 2, 1, 2])\n",
+    "rs = ShuffleSplit(n_splits=3, test_size=.25, random_state=0)\n",
+    "rs.get_n_splits(X)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('TRAIN:', array([3, 1, 0]), 'TEST:', array([2]))\n",
+      "('TRAIN:', array([2, 1, 3]), 'TEST:', array([0]))\n",
+      "('TRAIN:', array([0, 2, 1]), 'TEST:', array([3]))\n"
+     ]
+    }
+   ],
+   "source": [
+    "for train_index, test_index in rs.split(X):\n",
+    "   print(\"TRAIN:\", train_index, \"TEST:\", test_index)\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('TRAIN:', array([3, 1]), 'TEST:', array([2]))\n",
+      "('TRAIN:', array([2, 1]), 'TEST:', array([0]))\n",
+      "('TRAIN:', array([0, 2]), 'TEST:', array([3]))\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "rs = ShuffleSplit(n_splits=3, train_size=0.5, test_size=.25,\n",
+    "                  random_state=0)\n",
+    "for train_index, test_index in rs.split(X):\n",
+    "   print(\"TRAIN:\", train_index, \"TEST:\", test_index)\n",
+    " \n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
