--- a/lecture_quiz_archive/lecture_quiz.ipynb
+++ b/lecture_quiz_archive/lecture_quiz.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -51,20 +51,9 @@
       "0            1         0       3  22.0      1      0   7.2500\n",
       "1            2         1       1  38.0      1      0  71.2833\n",
       "\n",
-      "Decision Tree has accuracy:  0.63687150838\n",
+      "Decision Tree has accuracy:  0.648044692737\n",
       "\n",
-      "GaussianNB has accuracy: "
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'X_text' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-17-465928801894>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     46\u001b[0m \u001b[0mclf2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mGaussianNB\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m \u001b[0mclf2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 48\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0;34m\"\\nGaussianNB has accuracy: \"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0maccuracy_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mclf2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_text\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     49\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     50\u001b[0m answer = { \n",
-      "\u001b[0;31mNameError\u001b[0m: name 'X_text' is not defined"
+      "GaussianNB has accuracy:  0.698324022346\n"
      ]
     }
    ],
@@ -116,7 +105,7 @@
     "# The naive Bayes classifier\n",
     "clf2 = GaussianNB()\n",
     "clf2.fit(X_train,y_train)\n",
-    "print \"\\nGaussianNB has accuracy: \",accuracy_score(y_test, clf2.predict(X_text))\n",
+    "print \"\\nGaussianNB has accuracy: \",accuracy_score(y_test, clf2.predict(X_test))\n",
     "\n",
     "answer = { \n",
     " \"Naive Bayes Score\": 0, \n",
@@ -126,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
