--- a/finding_donors/finding_donors.ipynb
+++ b/finding_donors/finding_donors.ipynb
@@ -1770,6 +1770,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print type(y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 103,
    "metadata": {
     "collapsed": false
