WIP to drop outlier

--- a/customer_segments/customer_segments.ipynb
+++ b/customer_segments/customer_segments.ipynb
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 113,
    "metadata": {
     "collapsed": false
    },
@@ -871,17 +871,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n"
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "6.72623340236\n"
      ]
     }
    ],
    "source": [
-    "print type(log_data_pddf)"
+    "print type(log_data_pddf)\n",
+    "print np.percentile(log_data_pddf,25)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 118,
    "metadata": {
     "collapsed": false
    },
@@ -931,7 +933,7 @@
        "1  8.861775  9.191158  9.166179  7.474205  8.099554  7.482119"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -942,7 +944,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 156,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fresh</th>\n",
+       "      <th>Milk</th>\n",
+       "      <th>Grocery</th>\n",
+       "      <th>Frozen</th>\n",
+       "      <th>Detergents_Paper</th>\n",
+       "      <th>Delicatessen</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>9.446913</td>\n",
+       "      <td>9.175335</td>\n",
+       "      <td>8.930759</td>\n",
+       "      <td>5.365976</td>\n",
+       "      <td>7.891331</td>\n",
+       "      <td>7.198931</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>8.861775</td>\n",
+       "      <td>9.191158</td>\n",
+       "      <td>9.166179</td>\n",
+       "      <td>7.474205</td>\n",
+       "      <td>8.099554</td>\n",
+       "      <td>7.482119</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Fresh      Milk   Grocery    Frozen  Detergents_Paper  Delicatessen\n",
+       "0  9.446913  9.175335  8.930759  5.365976          7.891331      7.198931\n",
+       "1  8.861775  9.191158  9.166179  7.474205          8.099554      7.482119"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Fresh      Milk   Grocery    Frozen  Detergents_Paper  Delicatessen\n",
+      "0  9.446913  9.175335  8.930759  5.365976          7.891331      7.198931\n",
+      "1  8.861775  9.191158  9.166179  7.474205          8.099554      7.482119\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "[0 1]\n",
+      "<type 'numpy.ndarray'>\n",
+      "[0, 1]\n",
+      "<type 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "#column name changed when converted to np.log and now it is back to pd.df.\n",
+    "#colum name needs to be changed for clarity.\n",
+    "#0:'Fresh',1:'Milk',2:'Grocery',3:'Frozen',4:'Detergents_Paper',5:'Delicatessen'\n",
+    "log_data_pddf_colRenamed=pd.DataFrame(log_data_pddf.rename\n",
+    "                        (columns={0:'Fresh',1:'Milk',2:'Grocery',3:'Frozen',4:'Detergents_Paper',5:'Delicatessen'}))\n",
+    "display(log_data_pddf_colRenamed[:2])\n",
+    "df_index_practice=log_data_pddf_colRenamed[:2]\n",
+    "print df_index_practice\n",
+    "print type(df_index_practice)\n",
+    "print df_index_practice.index.values \n",
+    "print type(df_index_practice.index.values)\n",
+    "print df_index_practice.index.tolist() \n",
+    "print type(df_index_practice.index.tolist())\n",
+    "#print log_data_pddf_colRenamed.head(2).index.get_values('Fresh') #Doesnt work.\n",
+    "#print log_data_pddf_colRenamed.head(2).index.get_level_values('Fresh').tolist() \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
    "metadata": {
     "collapsed": false
    },
@@ -951,20 +1041,101 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data points considered outliers for the feature '0':\n"
+      "440\n",
+      "Int64Index([ 53,  65,  66,  81,  95,  96,  97,  98, 128, 159, 170, 171, 173,\n",
+      "            174, 181, 184, 193, 218, 266, 272, 299, 304, 305, 327, 338, 340,\n",
+      "            342, 353, 355, 357, 392, 412],\n",
+      "           dtype='int64')\n",
+      "<type 'NoneType'>\n"
      ]
     },
     {
-     "name": "stderr",
+     "ename": "TypeError",
+     "evalue": "object of type 'NoneType' has no len()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-191-03eddfd4f2e5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;31m#level=None, drop=False, inplace=False, col_level=0, col_fill=''\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgood_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgood_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m \u001b[0;31m#display(good_data)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: object of type 'NoneType' has no len()"
+     ]
+    }
+   ],
+   "source": [
+    "#display(log_data_pddf_colRenamed) #440 rows × 6 columns\n",
+    "print len(log_data_pddf_colRenamed)\n",
+    "feature='Fresh'\n",
+    "Q1 = np.percentile(log_data_pddf_colRenamed[feature],25)\n",
+    "Q3 = np.percentile(log_data_pddf_colRenamed[feature],75)\n",
+    "\n",
+    "step = Q3-Q1\n",
+    "outlier_df=log_data_pddf_colRenamed[~((log_data_pddf_colRenamed[feature] >= Q1 - step) & \n",
+    "                                        (log_data_pddf_colRenamed[feature] <= Q3 + step))]\n",
+    "\n",
+    "outlier_index_np=outlier_df.index\n",
+    "print outlier_index_np\n",
+    "\n",
+    "good_data = log_data_pddf_colRenamed.drop(\n",
+    "    log_data_pddf_colRenamed.index[outlier_index_np]).reset_index(drop = False,inplace=True) #drop = True\n",
+    "#level=None, drop=False, inplace=False, col_level=0, col_fill=''\n",
+    "print type(good_data)\n",
+    "print len(good_data)\n",
+    "#display(good_data)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/parksoy/anaconda/lib/python2.7/site-packages/ipykernel/__main__.py:16: VisibleDeprecationWarning: boolean index did not match indexed array along dimension 0; dimension is 440 but corresponding boolean dimension is 6\n"
+      "Q1 Fresh 8.04805870221\n",
+      "Q3 Fresh 9.73706394795\n",
+      "Data points considered outliers for the feature 'Fresh':\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([], shape=(0, 6), dtype=float64)"
+       "53      6.196444\n",
+       "65      4.442651\n",
+       "66      2.197225\n",
+       "81      5.389072\n",
+       "95      1.098612\n",
+       "96      3.135494\n",
+       "97      5.998937\n",
+       "98      6.220590\n",
+       "128     4.941642\n",
+       "159     5.872118\n",
+       "170     5.560682\n",
+       "171     5.298317\n",
+       "173     6.242223\n",
+       "174     5.655992\n",
+       "181    11.627601\n",
+       "184     5.789960\n",
+       "193     5.192957\n",
+       "218     2.890372\n",
+       "266     6.349139\n",
+       "272     6.242223\n",
+       "299     6.095825\n",
+       "304     5.081404\n",
+       "305     5.493061\n",
+       "327     6.295266\n",
+       "338     1.098612\n",
+       "340     5.942799\n",
+       "342     5.541264\n",
+       "353     4.762174\n",
+       "355     5.247024\n",
+       "357     3.610918\n",
+       "392     6.249975\n",
+       "412     4.574711\n",
+       "Name: Fresh, dtype: float64"
       ]
      },
      "metadata": {},
@@ -974,13 +1145,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data points considered outliers for the feature '1':\n"
+      "[ 53  65  66  81  95  96  97  98 128 159 170 171 173 174 181 184 193 218\n",
+      " 266 272 299 304 305 327 338 340 342 353 355 357 392 412]\n",
+      "Q1 Milk 7.33498124004\n",
+      "Q3 Milk 8.88048008859\n",
+      "Data points considered outliers for the feature 'Milk':\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([], shape=(0, 6), dtype=float64)"
+       "23     10.502956\n",
+       "47     10.901524\n",
+       "61     10.555005\n",
+       "85     10.740670\n",
+       "86     11.205013\n",
+       "97      5.537334\n",
+       "98      4.718499\n",
+       "122     5.303305\n",
+       "154     4.007333\n",
+       "183    10.690808\n",
+       "191     5.686975\n",
+       "269     5.552960\n",
+       "289     5.655992\n",
+       "356     4.897840\n",
+       "Name: Milk, dtype: float64"
       ]
      },
      "metadata": {},
@@ -990,13 +1179,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data points considered outliers for the feature '2':\n"
+      "[ 23  47  61  85  86  97  98 122 154 183 191 269 289 356]\n",
+      "Q1 Grocery 7.67461620137\n",
+      "Q3 Grocery 9.27385367724\n",
+      "Data points considered outliers for the feature 'Grocery':\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([], shape=(0, 6), dtype=float64)"
+       "47     10.925417\n",
+       "61     10.995377\n",
+       "75      1.098612\n",
+       "85     11.437986\n",
+       "122     5.501258\n",
+       "131     5.749393\n",
+       "154     4.919981\n",
+       "161     5.645447\n",
+       "275     5.407172\n",
+       "333    11.116886\n",
+       "356     5.384495\n",
+       "Name: Grocery, dtype: float64"
       ]
      },
      "metadata": {},
@@ -1006,13 +1209,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data points considered outliers for the feature '3':\n"
+      "[ 47  61  75  85 122 131 154 161 275 333 356]\n",
+      "Q1 Frozen 6.60967774917\n",
+      "Q3 Frozen 8.17589608318\n",
+      "Data points considered outliers for the feature 'Frozen':\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([], shape=(0, 6), dtype=float64)"
+       "16      4.897840\n",
+       "38      3.496508\n",
+       "57      3.637586\n",
+       "59      4.859812\n",
+       "60      4.564348\n",
+       "65      3.583519\n",
+       "93     10.463360\n",
+       "96      4.976734\n",
+       "103     9.799681\n",
+       "106     4.890349\n",
+       "128     4.955827\n",
+       "138     5.043425\n",
+       "144     4.770685\n",
+       "145     3.737670\n",
+       "154     4.317488\n",
+       "175     3.951244\n",
+       "183    10.505999\n",
+       "184     4.304065\n",
+       "196     9.836867\n",
+       "221     4.510860\n",
+       "264     4.110874\n",
+       "325    11.016479\n",
+       "333     4.875197\n",
+       "357     4.919981\n",
+       "379     4.867534\n",
+       "403     4.844187\n",
+       "412     4.584967\n",
+       "413     9.790655\n",
+       "418     4.890349\n",
+       "420     3.218876\n",
+       "429     3.850148\n",
+       "439     4.174387\n",
+       "Name: Frozen, dtype: float64"
       ]
      },
      "metadata": {},
@@ -1022,13 +1260,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data points considered outliers for the feature '4':\n"
+      "[ 16  38  57  59  60  65  93  96 103 106 128 138 144 145 154 175 183 184\n",
+      " 196 221 264 325 333 357 379 403 412 413 418 420 429 439]\n",
+      "Q1 Detergents_Paper 5.54810142479\n",
+      "Q3 Detergents_Paper 8.27434059875\n",
+      "Data points considered outliers for the feature 'Detergents_Paper':\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([], shape=(0, 6), dtype=float64)"
+       "75     1.098612\n",
+       "154    1.945910\n",
+       "161    1.098612\n",
+       "204    1.609438\n",
+       "338    2.708050\n",
+       "356    2.197225\n",
+       "402    2.302585\n",
+       "Name: Detergents_Paper, dtype: float64"
       ]
      },
      "metadata": {},
@@ -1038,43 +1287,93 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data points considered outliers for the feature '5':\n"
+      "[ 75 154 161 204 338 356 402]\n",
+      "Q1 Delicatessen 6.01187465693\n",
+      "Q3 Delicatessen 7.50672842655\n",
+      "Data points considered outliers for the feature 'Delicatessen':\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([], shape=(0, 6), dtype=float64)"
+       "23      9.712509\n",
+       "25      4.043051\n",
+       "42      3.828641\n",
+       "43      4.276666\n",
+       "44      4.174387\n",
+       "66      3.295837\n",
+       "71      9.579971\n",
+       "87      9.571575\n",
+       "88      3.828641\n",
+       "97      4.143135\n",
+       "109     1.098612\n",
+       "128     1.098612\n",
+       "137     3.583519\n",
+       "142     1.098612\n",
+       "154     2.079442\n",
+       "181     9.053687\n",
+       "183    10.777768\n",
+       "184     2.397895\n",
+       "187     1.098612\n",
+       "190     4.158883\n",
+       "191     4.430817\n",
+       "203     2.890372\n",
+       "233     1.945910\n",
+       "270     4.025352\n",
+       "285     2.890372\n",
+       "289     3.091042\n",
+       "303     4.077537\n",
+       "318     3.931826\n",
+       "343     3.610918\n",
+       "375     4.248495\n",
+       "412     4.127134\n",
+       "439     3.951244\n",
+       "Name: Delicatessen, dtype: float64"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 23  25  42  43  44  66  71  87  88  97 109 128 137 142 154 181 183 184\n",
+      " 187 190 191 203 233 270 285 289 303 318 343 375 412 439]\n"
+     ]
     }
    ],
    "source": [
     "# For each feature find the data points with extreme high or low values\n",
-    "for feature in log_data_pddf.keys():\n",
+    "\n",
+    "for feature in log_data_pddf_colRenamed.keys():\n",
     "    \n",
     "    # TODO: Calculate Q1 (25th percentile of the data) for the given feature\n",
-    "    Q1 = np.percentile(log_data_pddf,25)\n",
-    "   \n",
+    "    Q1 = np.percentile(log_data_pddf_colRenamed[feature],25)\n",
+    "    #print \"Q1\",feature, Q1\n",
     "    \n",
     "    # TODO: Calculate Q3 (75th percentile of the data) for the given feature\n",
-    "    Q3 = np.percentile(log_data_pddf,75)\n",
+    "    Q3 = np.percentile(log_data_pddf_colRenamed[feature],75)\n",
+    "    #print \"Q3\", feature,Q3\n",
     "    \n",
     "    # TODO: Use the interquartile range to calculate an outlier step (1.5 times the interquartile range)\n",
     "    step = Q3-Q1\n",
     "    \n",
     "    # Display the outliers\n",
     "    print \"Data points considered outliers for the feature '{}':\".format(feature)\n",
-    "    display(log_data[~((log_data[feature] >= Q1 - step) & (log_data[feature] <= Q3 + step))])\n",
+    "    outlier_np=log_data_pddf_colRenamed[~((log_data_pddf_colRenamed[feature] >= Q1 - step) & \n",
+    "                                        (log_data_pddf_colRenamed[feature] <= Q3 + step))]\n",
+    "    display(outlier_df[feature])\n",
     "\n",
-    "    \n",
-    "# OPTIONAL: Select the indices for data points you wish to remove\n",
-    "#outliers  = []\n",
+    "    # OPTIONAL: Select the indices for data points you wish to remove\n",
+    "    outliers_df  = outlier_df.index.values #numpy array\n",
+    "    print outliers\n",
+    "    # Remove the outliers, if any were specified\n",
+    "    #display(log_data_pddf_colRenamed)\n",
+    "    #good_data = log_data_pddf_colRenamed.drop(log_data_pddf_colRenamed.index[outliers]).reset_index(drop = True)\n",
+    "    #display(good_data)\n",
     "\n",
-    "# Remove the outliers, if any were specified\n",
-    "#good_data = log_data.drop(log_data.index[outliers]).reset_index(drop = True)"
+    "\n"
    ]
   },
   {
