--- a/customer_segments/pd_dataframe_practice.ipynb
+++ b/customer_segments/pd_dataframe_practice.ipynb
@@ -24,59 +24,59 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>-0.435310</td>\n",
-       "      <td>0.313977</td>\n",
-       "      <td>-1.385878</td>\n",
-       "      <td>-0.991826</td>\n",
+       "      <td>-1.056142</td>\n",
+       "      <td>-0.526380</td>\n",
+       "      <td>-1.135911</td>\n",
+       "      <td>0.008770</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.443195</td>\n",
-       "      <td>-0.470391</td>\n",
-       "      <td>-0.534474</td>\n",
-       "      <td>-0.668541</td>\n",
+       "      <td>0.373515</td>\n",
+       "      <td>0.008721</td>\n",
+       "      <td>-0.840300</td>\n",
+       "      <td>-0.244096</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>-0.892505</td>\n",
-       "      <td>0.346045</td>\n",
-       "      <td>-0.487208</td>\n",
-       "      <td>0.687611</td>\n",
+       "      <td>1.295825</td>\n",
+       "      <td>0.959123</td>\n",
+       "      <td>-0.512163</td>\n",
+       "      <td>0.123864</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.306953</td>\n",
-       "      <td>1.234306</td>\n",
-       "      <td>1.484615</td>\n",
-       "      <td>1.013546</td>\n",
+       "      <td>-0.333477</td>\n",
+       "      <td>1.602679</td>\n",
+       "      <td>1.122362</td>\n",
+       "      <td>2.234422</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1.193094</td>\n",
-       "      <td>0.106820</td>\n",
-       "      <td>0.651044</td>\n",
-       "      <td>1.650039</td>\n",
+       "      <td>-1.048204</td>\n",
+       "      <td>1.031705</td>\n",
+       "      <td>0.512349</td>\n",
+       "      <td>-0.583249</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>-1.213601</td>\n",
-       "      <td>-1.686306</td>\n",
-       "      <td>0.782637</td>\n",
-       "      <td>-0.772344</td>\n",
+       "      <td>-0.057951</td>\n",
+       "      <td>-0.016289</td>\n",
+       "      <td>1.287123</td>\n",
+       "      <td>1.804564</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>-0.775631</td>\n",
-       "      <td>-0.637413</td>\n",
-       "      <td>-0.535214</td>\n",
-       "      <td>-1.043716</td>\n",
+       "      <td>2.338721</td>\n",
+       "      <td>-0.007598</td>\n",
+       "      <td>0.855377</td>\n",
+       "      <td>0.466382</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>-1.218183</td>\n",
-       "      <td>0.194634</td>\n",
-       "      <td>0.730464</td>\n",
-       "      <td>-3.065086</td>\n",
+       "      <td>-1.209557</td>\n",
+       "      <td>0.557530</td>\n",
+       "      <td>0.213229</td>\n",
+       "      <td>1.672566</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -84,14 +84,14 @@
       ],
       "text/plain": [
        "          A         B         C         D\n",
-       "0 -0.435310  0.313977 -1.385878 -0.991826\n",
-       "1  0.443195 -0.470391 -0.534474 -0.668541\n",
-       "2 -0.892505  0.346045 -0.487208  0.687611\n",
-       "3  0.306953  1.234306  1.484615  1.013546\n",
-       "4  1.193094  0.106820  0.651044  1.650039\n",
-       "5 -1.213601 -1.686306  0.782637 -0.772344\n",
-       "6 -0.775631 -0.637413 -0.535214 -1.043716\n",
-       "7 -1.218183  0.194634  0.730464 -3.065086"
+       "0 -1.056142 -0.526380 -1.135911  0.008770\n",
+       "1  0.373515  0.008721 -0.840300 -0.244096\n",
+       "2  1.295825  0.959123 -0.512163  0.123864\n",
+       "3 -0.333477  1.602679  1.122362  2.234422\n",
+       "4 -1.048204  1.031705  0.512349 -0.583249\n",
+       "5 -0.057951 -0.016289  1.287123  1.804564\n",
+       "6  2.338721 -0.007598  0.855377  0.466382\n",
+       "7 -1.209557  0.557530  0.213229  1.672566"
       ]
      },
      "metadata": {},
@@ -410,6 +410,307 @@
    "source": [
     "s.name=len(df) #len(df)=8\n",
     "df.append(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "raw_data = {'student_name': ['Miller', 'Jacobson', 'Ali', 'Milner', 'Cooze', 'Jacon', 'Ryaner', 'Sone', 'Sloan', 'Piger', 'Riani', 'Ali'], \n",
+    "        'test_score': [76, 88, 84, 67, 53, 96, 64, 91, 77, 73, 52, np.NaN]}\n",
+    "df = pd.DataFrame(raw_data, columns = ['student_name', 'test_score'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>student_name</th>\n",
+       "      <th>test_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Miller</td>\n",
+       "      <td>76.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Jacobson</td>\n",
+       "      <td>88.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Ali</td>\n",
+       "      <td>84.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Milner</td>\n",
+       "      <td>67.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Cooze</td>\n",
+       "      <td>53.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Jacon</td>\n",
+       "      <td>96.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Ryaner</td>\n",
+       "      <td>64.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Sone</td>\n",
+       "      <td>91.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Sloan</td>\n",
+       "      <td>77.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Piger</td>\n",
+       "      <td>73.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Riani</td>\n",
+       "      <td>52.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Ali</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   student_name  test_score\n",
+       "0        Miller        76.0\n",
+       "1      Jacobson        88.0\n",
+       "2           Ali        84.0\n",
+       "3        Milner        67.0\n",
+       "4         Cooze        53.0\n",
+       "5         Jacon        96.0\n",
+       "6        Ryaner        64.0\n",
+       "7          Sone        91.0\n",
+       "8         Sloan        77.0\n",
+       "9         Piger        73.0\n",
+       "10        Riani        52.0\n",
+       "11          Ali         NaN"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from IPython.display import display # Allows the use of display() for DataFrames\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#VERY IMPORTANT To ADD ONE MORE COLUMN by interating FOR LOOP. \n",
+    "# Create a list to store the data\n",
+    "grades = []\n",
+    "\n",
+    "# For each row in the column,\n",
+    "for row in df['test_score']:\n",
+    "    # if more than a value,\n",
+    "    if row > 95:\n",
+    "        # Append a letter grade\n",
+    "        grades.append('A')\n",
+    "    # else, if more than a value,\n",
+    "    elif row > 90:\n",
+    "        # Append a letter grade\n",
+    "        grades.append('A-')\n",
+    "    # else, if more than a value,\n",
+    "    elif row > 85:\n",
+    "        # Append a letter grade\n",
+    "        grades.append('B')\n",
+    "    # else, if more than a value,\n",
+    "    elif row > 80:\n",
+    "        # Append a letter grade\n",
+    "        grades.append('B-')\n",
+    "    # else, if more than a value,\n",
+    "    elif row > 75:\n",
+    "        # Append a letter grade\n",
+    "        grades.append('C')\n",
+    "    # else, if more than a value,\n",
+    "    elif row > 70:\n",
+    "        # Append a letter grade\n",
+    "        grades.append('C-')\n",
+    "    # else, if more than a value,\n",
+    "    elif row > 65:\n",
+    "        # Append a letter grade\n",
+    "        grades.append('D')\n",
+    "    # else, if more than a value,\n",
+    "    elif row > 60:\n",
+    "        # Append a letter grade\n",
+    "        grades.append('D-')\n",
+    "    # otherwise,\n",
+    "    else:\n",
+    "        # Append a failing grade\n",
+    "        grades.append('Failed')\n",
+    "\n",
+    "# Create a column from the list\n",
+    "df['grades'] = grades"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>student_name</th>\n",
+       "      <th>test_score</th>\n",
+       "      <th>grades</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Miller</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Jacobson</td>\n",
+       "      <td>88.0</td>\n",
+       "      <td>B</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Ali</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>B-</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Milner</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>D</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Cooze</td>\n",
+       "      <td>53.0</td>\n",
+       "      <td>Failed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Jacon</td>\n",
+       "      <td>96.0</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Ryaner</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>D-</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Sone</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>A-</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Sloan</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Piger</td>\n",
+       "      <td>73.0</td>\n",
+       "      <td>C-</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Riani</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>Failed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Ali</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Failed</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   student_name  test_score  grades\n",
+       "0        Miller        76.0       C\n",
+       "1      Jacobson        88.0       B\n",
+       "2           Ali        84.0      B-\n",
+       "3        Milner        67.0       D\n",
+       "4         Cooze        53.0  Failed\n",
+       "5         Jacon        96.0       A\n",
+       "6        Ryaner        64.0      D-\n",
+       "7          Sone        91.0      A-\n",
+       "8         Sloan        77.0       C\n",
+       "9         Piger        73.0      C-\n",
+       "10        Riani        52.0  Failed\n",
+       "11          Ali         NaN  Failed"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# View the new dataframe\n",
+    "df"
    ]
   },
   {
