--- a/smartcab/smartcab.ipynb
+++ b/smartcab/smartcab.ipynb
@@ -396,6 +396,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This results in \n",
+    "\n",
+    "/-------------------\n",
+    "| Step 17 Results\n",
+    "\\-------------------\n",
+    "\n",
+    "YAYAYAYAY self.next_waypoint: right  \n",
+    "Agent previous state: ('right', {'light': 'green', 'oncoming': 'left', 'right': None, 'left': 'right'}, 3)  \n",
+    "Agent idled at a green light with oncoming traffic. (rewarded 0.94)  \n",
+    "10% of time remaining to reach destination.  \n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "-----\n",
     "## Implement a Q-Learning Driving Agent\n",
     "The third step to creating an optimized Q-Learning agent is to begin implementing the functionality of Q-Learning itself. The concept of Q-Learning is fairly straightforward: For every state the agent visits, create an entry in the Q-table for all state-action pairs available. Then, when the agent encounters a state and performs an action, update the Q-value associated with that state-action pair based on the reward received and the interative update rule implemented. Of course, additional benefits come from Q-Learning, such that we can have the agent choose the *best* action for each state based on the Q-values of each state-action pair possible. For this project, you will be implementing a *decaying,* $\\epsilon$*-greedy* Q-learning algorithm with *no* discount factor. Follow the implementation instructions under each **TODO** in the agent functions.\n",
