--- a/smartcab/practice_pandaDataFrameSeriesDict_forPlotting_toOptimize.ipynb
+++ b/smartcab/practice_pandaDataFrameSeriesDict_forPlotting_toOptimize.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "metadata": {
     "collapsed": true
    },
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -110,7 +110,7 @@
        "5  2012-06-08  388"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -157,19 +157,41 @@
       "2012-06-11    389\n",
       "2012-06-12    389\n",
       "2012-06-13    389\n",
-      "Name: DateValue, dtype: int64\n"
+      "Name: DateValue, dtype: int64\n",
+      "----------------------------------------\n",
+      "DateValue\n"
      ]
     }
    ],
    "source": [
-    "\n",
     "s = pd.Series(d, name='DateValue')\n",
-    "print s"
+    "print s\n",
+    "print \"----\"*10\n",
+    "print s.name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print s.index.name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -231,7 +253,7 @@
        "5  2012-06-13        389"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,6 +261,112 @@
    "source": [
     "s.index.name = 'Date'\n",
     "s.reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Date\n"
+     ]
+    }
+   ],
+   "source": [
+    "print s.index.name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "388\n",
+      "------------------------------\n",
+      "Date\n",
+      "2012-06-08    388\n",
+      "2012-06-09    388\n",
+      "2012-06-10    388\n",
+      "2012-06-11    389\n",
+      "2012-06-12    389\n",
+      "2012-06-13    389\n",
+      "Name: DateValue, dtype: int64\n",
+      "------------------------------\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print s[0]\n",
+    "print \"---\"*10\n",
+    "print s[:]\n",
+    "print \"---\"*10\n",
+    "print s.get('DateValue')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            DateValue\n",
+      "Date                 \n",
+      "2012-06-08        388\n",
+      "2012-06-09        388\n",
+      "2012-06-10        388\n",
+      "2012-06-11        389\n",
+      "2012-06-12        389\n",
+      "2012-06-13        389\n"
+     ]
+    }
+   ],
+   "source": [
+    "df1=pd.DataFrame(s)\n",
+    "print df1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Date\n",
+      "2012-06-08    388\n",
+      "2012-06-09    388\n",
+      "2012-06-10    388\n",
+      "2012-06-11    389\n",
+      "2012-06-12    389\n",
+      "2012-06-13    389\n",
+      "Name: DateValue, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print df1['DateValue']"
    ]
   },
   {
