--- a/digit_recognition/digit_recognition.ipynb
+++ b/digit_recognition/digit_recognition.ipynb
@@ -6,6 +6,15 @@
    "source": [
     "Started January 16th 2017\n",
     "\n",
+    "Note for initial setup:\n",
+    "\n",
+    "sudo pip install keras\n",
+    "\n",
+    "conda create -n tensorflow python=2.7\n",
+    "\n",
+    "source activate tensorflow\n",
+    "\n",
+    "\n",
     "# Machine Learning Engineer Nanodegree\n",
     "## Deep Learning\n",
     "## Project: Build a Digit Recognition Program\n",
