using udacity CNN model-optimized kernal size, conv and max pool stride. now lebel dimension needs to be fixed

--- a/digit_recognition/4_CNN_multidigits_LeCun.ipynb
+++ b/digit_recognition/4_CNN_multidigits_LeCun.ipynb
@@ -51,6 +51,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train_labels[0]--- [ 2  4  8 10 10 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('train_labels[0]---',train_labels[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {
     "collapsed": true
