--- a/digit_recognition/2_Udacity_DL_fullyconnected.ipynb
+++ b/digit_recognition/2_Udacity_DL_fullyconnected.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -259,8 +259,7 @@
     "  # These are the parameters that we are going to be training. The weight\n",
     "  # matrix will be initialized using random values following a (truncated)\n",
     "  # normal distribution. The biases get initialized to zero.\n",
-    "  weights = tf.Variable(\n",
-    "    tf.truncated_normal([image_size * image_size, num_labels]))\n",
+    "  weights = tf.Variable(tf.truncated_normal([image_size * image_size, num_labels]))\n",
     "  biases = tf.Variable(tf.zeros([num_labels]))\n",
     "  \n",
     "  # Training computation.\n",
@@ -269,8 +268,7 @@
     "  # it's very common, and it can be optimized). We take the average of this\n",
     "  # cross-entropy across all training examples: that's our loss.\n",
     "  logits = tf.matmul(tf_train_dataset, weights) + biases\n",
-    "  loss = tf.reduce_mean(\n",
-    "    tf.nn.softmax_cross_entropy_with_logits(labels=tf_train_labels, logits=logits))\n",
+    "  loss = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(labels=tf_train_labels, logits=logits))\n",
     "  \n",
     "  # Optimizer.\n",
     "  # We are going to find the minimum of this loss using gradient descent.\n",
@@ -297,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -338,34 +336,34 @@
      "output_type": "stream",
      "text": [
       "Initialized\n",
-      "Loss at step 0: 17.871296\n",
-      "Training accuracy: 7.5%\n",
-      "Validation accuracy: 9.9%\n",
-      "Loss at step 100: 2.258737\n",
-      "Training accuracy: 71.9%\n",
-      "Validation accuracy: 70.4%\n",
-      "Loss at step 200: 1.817770\n",
-      "Training accuracy: 74.8%\n",
-      "Validation accuracy: 72.5%\n",
-      "Loss at step 300: 1.581153\n",
-      "Training accuracy: 76.2%\n",
-      "Validation accuracy: 73.4%\n",
-      "Loss at step 400: 1.423419\n",
+      "Loss at step 0: 18.581232\n",
+      "Training accuracy: 5.0%\n",
+      "Validation accuracy: 6.4%\n",
+      "Loss at step 100: 2.360598\n",
+      "Training accuracy: 71.0%\n",
+      "Validation accuracy: 69.7%\n",
+      "Loss at step 200: 1.866347\n",
+      "Training accuracy: 74.7%\n",
+      "Validation accuracy: 72.7%\n",
+      "Loss at step 300: 1.616719\n",
+      "Training accuracy: 76.1%\n",
+      "Validation accuracy: 73.6%\n",
+      "Loss at step 400: 1.453259\n",
       "Training accuracy: 77.0%\n",
       "Validation accuracy: 73.9%\n",
-      "Loss at step 500: 1.306418\n",
+      "Loss at step 500: 1.333008\n",
       "Training accuracy: 77.7%\n",
-      "Validation accuracy: 74.4%\n",
-      "Loss at step 600: 1.214748\n",
-      "Training accuracy: 78.4%\n",
-      "Validation accuracy: 74.5%\n",
-      "Loss at step 700: 1.140223\n",
-      "Training accuracy: 78.9%\n",
-      "Validation accuracy: 74.6%\n",
-      "Loss at step 800: 1.077902\n",
-      "Training accuracy: 79.2%\n",
+      "Validation accuracy: 74.3%\n",
+      "Loss at step 600: 1.238682\n",
+      "Training accuracy: 78.3%\n",
       "Validation accuracy: 74.7%\n",
-      "Test accuracy: 82.6% \n",
+      "Loss at step 700: 1.161531\n",
+      "Training accuracy: 79.0%\n",
+      "Validation accuracy: 74.8%\n",
+      "Loss at step 800: 1.096650\n",
+      "Training accuracy: 79.3%\n",
+      "Validation accuracy: 74.9%\n",
+      "Test accuracy: 82.4% \n",
       "------\n"
      ]
     }
@@ -396,8 +394,7 @@
     "      # Calling .eval() on valid_prediction is basically like calling run(), but\n",
     "      # just to get that one numpy array. Note that it recomputes all its graph\n",
     "      # dependencies.\n",
-    "      print('Validation accuracy: %.1f%%' % accuracy(\n",
-    "        valid_prediction.eval(), valid_labels))\n",
+    "      print('Validation accuracy: %.1f%%' % accuracy(valid_prediction.eval(), valid_labels))\n",
     "  print('Test accuracy: %.1f%%' % accuracy(test_prediction.eval(), test_labels),'\\n------')"
    ]
   },
@@ -415,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -425,10 +422,22 @@
      }
     },
     "colab_type": "code",
-    "collapsed": true,
+    "collapsed": false,
     "id": "qhPMzWYRGrzM"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "weights---- (784, 10)\n",
+      "biases---- (10,)\n",
+      "logits--- (128, 10)\n",
+      "loss---- ()\n",
+      "train_prediction--- (128, 10)\n"
+     ]
+    }
+   ],
    "source": [
     "batch_size = 128\n",
     "\n",
@@ -437,29 +446,30 @@
     "\n",
     "  # Input data. For the training data, we use a placeholder that will be fed\n",
     "  # at run time with a training minibatch.\n",
-    "  tf_train_dataset = tf.placeholder(tf.float32,\n",
-    "                                    shape=(batch_size, image_size * image_size))\n",
+    "  tf_train_dataset = tf.placeholder(tf.float32,shape=(batch_size, image_size * image_size))\n",
     "  tf_train_labels = tf.placeholder(tf.float32, shape=(batch_size, num_labels))\n",
     "  tf_valid_dataset = tf.constant(valid_dataset)\n",
     "  tf_test_dataset = tf.constant(test_dataset)\n",
     "  \n",
     "  # Variables.\n",
-    "  weights = tf.Variable(\n",
-    "    tf.truncated_normal([image_size * image_size, num_labels]))\n",
+    "  weights = tf.Variable(tf.truncated_normal([image_size * image_size, num_labels]))\n",
+    "  print('weights----',weights.get_shape())\n",
     "  biases = tf.Variable(tf.zeros([num_labels]))\n",
+    "  print('biases----',biases.get_shape())\n",
     "  \n",
     "  # Training computation.\n",
     "  logits = tf.matmul(tf_train_dataset, weights) + biases\n",
-    "  loss = tf.reduce_mean(\n",
-    "    tf.nn.softmax_cross_entropy_with_logits(labels=tf_train_labels, logits=logits))\n",
+    "  print('logits---',logits.get_shape())\n",
+    "  loss = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(labels=tf_train_labels, logits=logits))\n",
+    "  print('loss----',loss.get_shape())\n",
     "  \n",
     "  # Optimizer.\n",
     "  optimizer = tf.train.GradientDescentOptimizer(0.5).minimize(loss)\n",
     "  \n",
     "  # Predictions for the training, validation, and test data.\n",
     "  train_prediction = tf.nn.softmax(logits)\n",
-    "  valid_prediction = tf.nn.softmax(\n",
-    "    tf.matmul(tf_valid_dataset, weights) + biases)\n",
+    "  print('train_prediction---', train_prediction.get_shape())\n",
+    "  valid_prediction = tf.nn.softmax(tf.matmul(tf_valid_dataset, weights) + biases)\n",
     "  test_prediction = tf.nn.softmax(tf.matmul(tf_test_dataset, weights) + biases)"
    ]
   },
@@ -475,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -516,28 +526,28 @@
      "output_type": "stream",
      "text": [
       "Initialized\n",
-      "Minibatch loss at step 0: 18.508896\n",
-      "Minibatch accuracy: 7.8%\n",
-      "Validation accuracy: 6.8%\n",
-      "Minibatch loss at step 500: 1.181170\n",
+      "Minibatch loss at step 0: 19.509193\n",
+      "Minibatch accuracy: 6.2%\n",
+      "Validation accuracy: 10.5%\n",
+      "Minibatch loss at step 500: 1.309776\n",
+      "Minibatch accuracy: 79.7%\n",
+      "Validation accuracy: 75.2%\n",
+      "Minibatch loss at step 1000: 1.330986\n",
       "Minibatch accuracy: 77.3%\n",
-      "Validation accuracy: 75.3%\n",
-      "Minibatch loss at step 1000: 1.452067\n",
-      "Minibatch accuracy: 78.9%\n",
-      "Validation accuracy: 76.3%\n",
-      "Minibatch loss at step 1500: 0.842676\n",
-      "Minibatch accuracy: 80.5%\n",
-      "Validation accuracy: 77.2%\n",
-      "Minibatch loss at step 2000: 0.824973\n",
+      "Validation accuracy: 76.7%\n",
+      "Minibatch loss at step 1500: 0.704184\n",
       "Minibatch accuracy: 83.6%\n",
       "Validation accuracy: 77.2%\n",
-      "Minibatch loss at step 2500: 0.863632\n",
+      "Minibatch loss at step 2000: 0.704618\n",
+      "Minibatch accuracy: 85.9%\n",
+      "Validation accuracy: 77.3%\n",
+      "Minibatch loss at step 2500: 1.038482\n",
       "Minibatch accuracy: 80.5%\n",
-      "Validation accuracy: 78.0%\n",
-      "Minibatch loss at step 3000: 1.040802\n",
-      "Minibatch accuracy: 73.4%\n",
-      "Validation accuracy: 78.6%\n",
-      "Test accuracy: 86.3%\n"
+      "Validation accuracy: 78.1%\n",
+      "Minibatch loss at step 3000: 1.210544\n",
+      "Minibatch accuracy: 75.0%\n",
+      "Validation accuracy: 78.8%\n",
+      "Test accuracy: 86.4%\n"
      ]
     }
    ],
@@ -559,8 +569,7 @@
     "    # The key of the dictionary is the placeholder node of the graph to be fed,\n",
     "    # and the value is the numpy array to feed to it.\n",
     "    feed_dict = {tf_train_dataset : batch_data, tf_train_labels : batch_labels}\n",
-    "    _, l, predictions = session.run(\n",
-    "      [optimizer, loss, train_prediction], feed_dict=feed_dict)\n",
+    "    _, l, predictions = session.run([optimizer, loss, train_prediction], feed_dict=feed_dict)\n",
     "    if (step % 500 == 0):\n",
     "      print(\"Minibatch loss at step %d: %f\" % (step, l))\n",
     "      print(\"Minibatch accuracy: %.1f%%\" % accuracy(predictions, batch_labels))\n",
@@ -649,13 +658,14 @@
     "import numpy as np\n",
     "\n",
     "def reformat(dataset, labels):\n",
-    "  dataset = dataset.reshape(\n",
-    "    (-1, image_size, image_size, num_channels)).astype(np.float32)\n",
+    "  dataset = dataset.reshape((-1, image_size, image_size, num_channels)).astype(np.float32)\n",
     "  labels = (np.arange(num_labels) == labels[:,None]).astype(np.float32)\n",
     "  return dataset, labels\n",
+    "\n",
     "train_dataset, train_labels = reformat(train_dataset, train_labels)\n",
     "valid_dataset, valid_labels = reformat(valid_dataset, valid_labels)\n",
     "test_dataset, test_labels = reformat(test_dataset, test_labels)\n",
+    "\n",
     "print('Training set', train_dataset.shape, train_labels.shape)\n",
     "print('Validation set', valid_dataset.shape, valid_labels.shape)\n",
     "print('Test set', test_dataset.shape, test_labels.shape)\n"
@@ -730,24 +740,19 @@
     "with graph.as_default():\n",
     "\n",
     "  # Input data.\n",
-    "  tf_train_dataset = tf.placeholder(\n",
-    "    tf.float32, shape=(batch_size, image_size, image_size, num_channels))\n",
+    "  tf_train_dataset = tf.placeholder(tf.float32, shape=(batch_size, image_size, image_size, num_channels))\n",
     "  tf_train_labels = tf.placeholder(tf.float32, shape=(batch_size, num_labels))\n",
     "  tf_valid_dataset = tf.constant(valid_dataset)\n",
     "  tf_test_dataset = tf.constant(test_dataset)\n",
     "  \n",
     "  # Variables.\n",
-    "  layer1_weights = tf.Variable(tf.truncated_normal(\n",
-    "      [patch_size, patch_size, num_channels, depth], stddev=0.1))\n",
+    "  layer1_weights = tf.Variable(tf.truncated_normal([patch_size, patch_size, num_channels, depth], stddev=0.1))\n",
     "  layer1_biases = tf.Variable(tf.zeros([depth]))\n",
-    "  layer2_weights = tf.Variable(tf.truncated_normal(\n",
-    "      [patch_size, patch_size, depth, depth], stddev=0.1))\n",
+    "  layer2_weights = tf.Variable(tf.truncated_normal([patch_size, patch_size, depth, depth], stddev=0.1))\n",
     "  layer2_biases = tf.Variable(tf.constant(1.0, shape=[depth]))\n",
-    "  layer3_weights = tf.Variable(tf.truncated_normal(\n",
-    "      [image_size // 4 * image_size // 4 * depth, num_hidden], stddev=0.1))\n",
+    "  layer3_weights = tf.Variable(tf.truncated_normal([image_size // 4 * image_size // 4 * depth, num_hidden], stddev=0.1))\n",
     "  layer3_biases = tf.Variable(tf.constant(1.0, shape=[num_hidden]))\n",
-    "  layer4_weights = tf.Variable(tf.truncated_normal(\n",
-    "      [num_hidden, num_labels], stddev=0.1))\n",
+    "  layer4_weights = tf.Variable(tf.truncated_normal([num_hidden, num_labels], stddev=0.1))\n",
     "  layer4_biases = tf.Variable(tf.constant(1.0, shape=[num_labels]))\n",
     "\n",
     "    \n",
@@ -783,8 +788,7 @@
     "\n",
     "  # Training computation.\n",
     "  logits = model(tf_train_dataset)\n",
-    "  loss = tf.reduce_mean(\n",
-    "    tf.nn.softmax_cross_entropy_with_logits(labels=tf_train_labels, logits=logits))\n",
+    "  loss = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(labels=tf_train_labels, logits=logits))\n",
     "    \n",
     "  # Optimizer.\n",
     "  optimizer = tf.train.GradientDescentOptimizer(0.05).minimize(loss)\n",
