docs: comment about change knn bar color to b

--- a/capstone/CapstoneProject_ML4Trading_SoyoungPark.ipynb
+++ b/capstone/CapstoneProject_ML4Trading_SoyoungPark.ipynb
@@ -5564,7 +5564,7 @@
     "colors = []\n",
     "for model in classifiers_f1_df.key: \n",
     "    if model.startswith('KNeighbors'):\n",
-    "        colors.append('b')\n",
+    "        colors.append('b') # changed back to b.\n",
     "    else:\n",
     "        colors.append('b')\n",
     "\n",
